# powerkit

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  ChangeLog  LICENSE  README.md  _config.yml  powerdwarf.SlackBuild  powerdwarf.info  powerdwarf.pri  powerdwarf.pro  powerdwarf.qrc  powerkit.pri  powerkit.pro  slack-desc
.github/workflows/: c-cpp.yml
app/: app.pro  common.cpp  common.h  dialog.cpp  dialog.h  icons.qrc  main.cpp  powerdwarf.desktop  service.h  systray.cpp  systray.h  theme.cpp
app/icons/Adwaita/: README.md  index.theme
app/share/applications/: powerdwarf.desktop  powerkit.desktop
app/share/autostart/: powerdwarf.desktop
app/share/man/: powerdwarf.1  powerdwarf.8  powerkit.1
app/share/polkit/localauthority/50-local.d/: com.ubuntu.enable-hibernate.pkla
app/share/slackware/: README  powerdwarf.SlackBuild  powerdwarf.info  powerkit.SlackBuild  powerkit.info  slack-desc
app/share/udev/: 90-backlight.rules
config/: config.pro  dialog.cpp  dialog.h  main.cpp  powerdwarf.desktop
daemon/: CMakeLists.txt  daemon.pro  main.cpp  manager.cpp  manager.h  powerkit_udev.cpp  powerkit_udev.h  powerkitd.conf.in  powerkitd.cpp  powerkitd.h  test.cpp
docs/: CNAME  LICENSE  README.md  build.sh  powerkit.1  powerkit.md
lib/: 90-backlight.rules  ckit.cpp  ckit.h  common.cpp  common.h  def.h  device.cpp  device.h  hotplug.cpp  hotplug.h  lib.pro  login1.cpp  login1.h  monitor.cpp  monitor.h  power.cpp  power.h  powerkit.cpp  powerkit.h  powerkit_backlight.h  powerkit_client.cpp  powerkit_freedesktop_pm.cpp  powerkit_freedesktop_ss.cpp  powerkit_rtc.cpp  powerkit_rtc.h  powerkit_settings.cpp  powerkit_settings.h  powermanagement.cpp  powermanagement.h  rtc.cpp  rtc.h  screens.cpp  screens.h  screensaver.cpp  screensaver.h  service.cpp  service.h  upower.cpp  upower.h
libx/: hotplug.cpp  screens.h
settings/: dialog.cpp  dialog.h  main.cpp  powerkit-settings.desktop  settings.pro
share/: 90-backlight.rules  autostart.desktop.in  conf.in  gendocs.sh  org.freedesktop.PowerManagement.Inhibit.xml  org.freedesktop.ScreenSaver.xml  powerki.1.orig  powerkit-conf.desktop  powerkit-settings.desktop  powerkit.1  powerkit.1.in  powerkit.desktop  powerkitd.8  powerkitd.conf.in  powerkitd.service.in  service.in  settings.desktop.in
src/: main.cpp  powerkit-conf.cpp  powerkit.cpp  powerkit.h  powerkit_app.cpp  powerkit_app.h  powerkit_backlight.cpp  powerkit_backlight.h  powerkit_client.cpp  powerkit_client.h  powerkit_common.h  powerkit_cpu.cpp  powerkit_cpu.h  powerkit_def.h  powerkit_device.cpp  powerkit_dialog.cpp  powerkit_dialog.h  powerkit_freedesktop_pm.cpp  powerkit_freedesktop_pm.h  powerkit_freedesktop_ss.cpp  powerkit_freedesktop_ss.h  powerkit_manager.cpp  powerkit_manager.h  powerkit_notify.cpp  powerkit_notify.h  powerkit_power_device.cpp  powerkit_power_device.h  powerkit_powermanagement.cpp  powerkit_powermanagement.h  powerkit_rtc.cpp  powerkit_rtc.h  powerkit_screensaver.cpp  powerkit_screensaver.h  powerkit_settings.cpp  powerkit_settings.h  powerkit_systray.cpp  powerkit_systray.h  powerkit_theme.cpp  powerkit_theme.h  powerkit_x11_screen_hotplug.cpp  (+6 more)
